# someline

./: .editorconfig  .markdownlint.yaml  .pre-commit-config.yaml  Makefile  README.md  Someline-15-Insets.3mf  Someline-15-Insets.FCStd  pyproject.toml  someline-15.py  someline-36.py
.github/workflows/: test.yml
3mf/: someline-15.3mf  someline-36.3mf
export/: Someline-15-Insets-U0.step  Someline-15-Insets-U0.stl  Someline-15-Insets-U1.step  Someline-15-Insets-U1.stl  Someline-15-Insets-U2.step  Someline-15-Insets-U2.stl  Someline-15-Insets-U3.step  Someline-15-Insets-U3.stl
export/someline-15/: Someline-15-U0.step  Someline-15-U0.stl  Someline-15-U1.step  Someline-15-U1.stl  Someline-15-U2.step  Someline-15-U2.stl  Someline-15-U3.step  Someline-15-U3.stl  Someline-15-U4.step  Someline-15-U4.stl  Someline-15-U5.step  Someline-15-U5.stl  U0.step  U0.stl  U1.step  U1.stl  U2.step  U2.stl  U3.step  U3.stl  U4.step  U4.stl  U5.step  U5.stl  cap.step  cap.stl
export/someline-36/: A1.step  A1.stl  A2.step  A2.stl  B1.step  B1.stl  B2.step  B2.stl  C3.step  C3.stl  C5.step  C5.stl  Someline-36-A1.step  Someline-36-A1.stl  Someline-36-B1.step  Someline-36-B2.step  Someline-36-C3.step  Someline-36-C3.stl  Someline-36-C5.step  Someline-36-C5.stl  Someline-36-U1.step  Someline-36-U1.stl  Someline-36-U10.step  Someline-36-U10.stl  Someline-36-U2.step  Someline-36-U2.stl  Someline-36-U3.step  Someline-36-U3.stl  Someline-36-U4.step  Someline-36-U4.stl  Someline-36-U5.step  Someline-36-U5.stl  Someline-36-U6.step  Someline-36-U6.stl  (+26 more)
someline/: someline.py  util.py
(+6 files in other folders)
