[project]
name = "someline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
  "build123d~=0.9.0",
  "click~=8.3.0",
  "fuzzysearch~=0.8.0",
]

[dependency-groups]
dev = [
  "ocp-vscode~=2.9.0",
  "pip>=25.0.1",
  "ty>=0.0.0a5",
]
