[project]
name = "someline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.14.6"
dependencies = [
  "build123d~=0.11.0",
  "click~=8.4.1",
  "fuzzysearch~=0.8.0",
]

[dependency-groups]
dev = [
  "ocp-vscode~=3.4.0",
  "pip>=25.0.1",
  "ruff>=0.14.5",
  "ty>=0.0.0a5",
]
